--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cheerio": "^1.2.0",
     "next": "^15.5.7",
+    "node-fetch": "^2.7.0",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "styled-components": "^6.1.19"
