--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "node-fetch": "^2.7.0",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
+    "react-markdown": "^10.1.0",
+    "rehype-raw": "^7.0.0",
+    "rehype-slug": "^6.0.0",
+    "remark-gfm": "^4.0.1",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
