--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "react-markdown": "^10.1.0",
     "rehype-raw": "^7.0.0",
     "rehype-slug": "^6.0.0",
-    "remark-gfm": "^4.0.1",
-    "styled-components": "^6.1.19"
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "eslint": "^8",
